tests/ui/const-generics/generic_const_exprs/size_of-dyn-trait.stderr
error[E0277]: the size for values of type `dyn Trait` cannot be known at compilation time
  --> $DIR/size_of-dyn-trait.rs:13:12
   |
LL |     let x: A<dyn Trait>;
   |            ^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `dyn Trait`
note: required by an implicit `Sized` bound in `A`
  --> $DIR/size_of-dyn-trait.rs:8:10
   |
LL | struct A<T>(T)
   |          ^ required by the implicit `Sized` requirement on this type parameter in `A`
help: you could relax the implicit `Sized` bound on `T` if it were used through indirection like `&T` or `Box<T>`
  --> $DIR/size_of-dyn-trait.rs:8:10
   |
LL | struct A<T>(T)
   |          ^  - ...if indirection were used here: `Box<T>`
   |          |
   |          this could be changed to `T: ?Sized`...

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
